force-app/main/default/objects/Home_Approval__c/Home_Approval__c.object-meta.xml
<CustomObject>
    <label>Home Approval</label>
    <nameField>
        <displayFormat>Home-{00000}</displayFormat>
        <label>Home Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Home Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>