force-app/main/default/objects/Home_Approval__c/fields/Ability_of_the_family_to_meet_needs__c.field-meta.xml
<CustomField>
    <fullName>Ability_of_the_family_to_meet_needs__c</fullName>
    <inlineHelpText>1. Ability of the family to meet the needs of its members [including appropriate discipline., health/mental needs</inlineHelpText>
    <label>1.Ability of the family to meet needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>