force-app/main/default/objects/Home_Approval__c/fields/Adoption_Subsidy_discussed__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Subsidy_discussed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User</inlineHelpText>
    <label>Adoption Subsidy discussed</label>
    <type>Checkbox</type>
</CustomField>