force-app/main/default/objects/Home_Approval__c/fields/Applicant_s_supervision_and_assure__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_supervision_and_assure__c</fullName>
    <inlineHelpText>5. Applicant&apos;s ability to provide supervision and assure the child&apos;s safety.</inlineHelpText>
    <label>5. Applicant&apos;s supervision and assure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>