force-app/main/default/objects/Home_Approval__c/fields/Application_Signed__c.field-meta.xml
<CustomField>
    <fullName>Application_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Signed</label>
    <type>Checkbox</type>
</CustomField>