force-app/main/default/objects/Home_Approval__c/fields/Approval_Beds__c.field-meta.xml
<CustomField>
    <fullName>Approval_Beds__c</fullName>
    <label>Approval Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>