force-app/main/default/objects/Home_Approval__c/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <label>Approval Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>