force-app/main/default/objects/Home_Approval__c/fields/Approval_Verified__c.field-meta.xml
<CustomField>
    <fullName>Approval_Verified__c</fullName>
    <formula>NOT(ISBLANK(  Approval_Beds__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified Enabled, If filled Supervisory Approval Date</inlineHelpText>
    <label>Verified (Filled Approval Beds)</label>
    <type>Checkbox</type>
</CustomField>