force-app/main/default/objects/Home_Approval__c/fields/At_Least_One_Home_Visit__c.field-meta.xml
<CustomField>
    <fullName>At_Least_One_Home_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Least One Home Visit</label>
    <type>Checkbox</type>
</CustomField>