force-app/main/default/objects/Home_Approval__c/fields/Child_Detail_Verified__c.field-meta.xml
<CustomField>
    <fullName>Child_Detail_Verified__c</fullName>
    <formula>Child_Information_Detail__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If child information detail filled.</inlineHelpText>
    <label>Verified(Filled child info details)</label>
    <type>Checkbox</type>
</CustomField>