force-app/main/default/objects/Home_Approval__c/fields/Child_Information_Detail__c.field-meta.xml
<CustomField>
    <fullName>Child_Information_Detail__c</fullName>
    <label>Child Information Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>