force-app/main/default/objects/Home_Approval__c/fields/Child_Information_Verified__c.field-meta.xml
<CustomField>
    <fullName>Child_Information_Verified__c</fullName>
    <formula>Minimum_Age_Years__c != null &amp;&amp;  Minimum_Age_Months__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If minimum age years &amp; age months are filled.</inlineHelpText>
    <label>Verified(Filled  min age years &amp; months)</label>
    <type>Checkbox</type>
</CustomField>