force-app/main/default/objects/Home_Approval__c/fields/Child_Support_background_check__c.field-meta.xml
<CustomField>
    <fullName>Child_Support_background_check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User</inlineHelpText>
    <label>Child Support background check</label>
    <type>Checkbox</type>
</CustomField>