force-app/main/default/objects/Home_Approval__c/fields/Children_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Children_Client_Id__c</fullName>
    <label>Client Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>