force-app/main/default/objects/Home_Approval__c/fields/Children_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Children_Client_Name__c</fullName>
    <label>Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>