force-app/main/default/objects/Home_Approval__c/fields/Children_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Children_Recommendations__c</fullName>
    <inlineHelpText>Recommendations(Include Information On Age Group,Number Of Children,Behaviors And Medical Characteristics,Legal Rescue,Preferred Sex And Race, Etc.)</inlineHelpText>
    <label>Recommendations</label>
    <type>TextArea</type>
</CustomField>