force-app/main/default/objects/Home_Approval__c/fields/Children_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Children_Related_To__c</fullName>
    <label>Related To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>