force-app/main/default/objects/Home_Approval__c/fields/Children_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Children_Relationship__c</fullName>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>