force-app/main/default/objects/Home_Approval__c/fields/Children_Verified__c.field-meta.xml
<CustomField>
    <fullName>Children_Verified__c</fullName>
    <formula>NOT(ISBLANK( Recommendations_include__c ))</formula>
    <inlineHelpText>Verified Enabled, If filled Recommendations (Include Informations)</inlineHelpText>
    <label>Verified (Filled Recommendation)</label>
    <type>Checkbox</type>
</CustomField>