force-app/main/default/objects/Home_Approval__c/fields/CIS_ID__c.field-meta.xml
<CustomField>
    <fullName>CIS_ID__c</fullName>
    <label>CIS ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>