force-app/main/default/objects/Home_Approval__c/fields/Client_Details__c.field-meta.xml
<CustomField>
    <fullName>Client_Details__c</fullName>
    <label>Client Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>