force-app/main/default/objects/Home_Approval__c/fields/Client_Verified__c.field-meta.xml
<CustomField>
    <fullName>Client_Verified__c</fullName>
    <formula>NOT(ISBLANK(Relationship__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified this client, If entered relationship value.</inlineHelpText>
    <label>Verified (Filled Relationship)</label>
    <type>Checkbox</type>
</CustomField>