force-app/main/default/objects/Home_Approval__c/fields/COMAR_Regulation__c.field-meta.xml
<CustomField>
    <fullName>COMAR_Regulation__c</fullName>
    <label>COMAR Regulation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>