force-app/main/default/objects/Home_Approval__c/fields/Combining_Various_Types_Of_Care__c.field-meta.xml
<CustomField>
    <fullName>Combining_Various_Types_Of_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(i.e. Day Care,Other Agency Foster Care)</inlineHelpText>
    <label>Combining Various Types Of Care</label>
    <type>Checkbox</type>
</CustomField>