force-app/main/default/objects/Home_Approval__c/fields/Confidentially_issues_discussed__c.field-meta.xml
<CustomField>
    <fullName>Confidentially_issues_discussed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User</inlineHelpText>
    <label>Confidentially issues discussed</label>
    <type>Checkbox</type>
</CustomField>