force-app/main/default/objects/Home_Approval__c/fields/Connecting_Family_Comments__c.field-meta.xml
<CustomField>
    <fullName>Connecting_Family_Comments__c</fullName>
    <inlineHelpText>Connecting Children to safe and Nuturing Relationships</inlineHelpText>
    <label>Connecting Family Comments</label>
    <type>TextArea</type>
</CustomField>