force-app/main/default/objects/Home_Approval__c/fields/Connecting_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Connecting_Strengths__c</fullName>
    <inlineHelpText>Connecting Children to safe and Nuturing Relationships</inlineHelpText>
    <label>Connecting Strengths</label>
    <type>TextArea</type>
</CustomField>