force-app/main/default/objects/Home_Approval__c/fields/Connecting_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Connecting_Weaknesses__c</fullName>
    <inlineHelpText>Connecting Children to safe and Nuturing Relationships</inlineHelpText>
    <label>Connecting Weaknesses</label>
    <type>TextArea</type>
</CustomField>