force-app/main/default/objects/Home_Approval__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Home Approvals</relationshipLabel>
    <relationshipName>Home_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>