force-app/main/default/objects/Home_Approval__c/fields/Corporal_Punishment_discussed__c.field-meta.xml
<CustomField>
    <fullName>Corporal_Punishment_discussed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User</inlineHelpText>
    <label>Corporal Punishment discussed</label>
    <type>Checkbox</type>
</CustomField>