force-app/main/default/objects/Home_Approval__c/fields/Description_of_Home_and_Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Home_and_Neighborhood__c</fullName>
    <label>Description of Home and Neighborhood</label>
    <type>TextArea</type>
</CustomField>