force-app/main/default/objects/Home_Approval__c/fields/Designation_CIS_ID_in_Childer__c.field-meta.xml
<CustomField>
    <fullName>Designation_CIS_ID_in_Childer__c</fullName>
    <formula>NOT(ISBLANK( CIS_ID__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Designation of responsible adult discussed (System)</inlineHelpText>
    <label>Designation (CIS ID in Childer)</label>
    <type>Checkbox</type>
</CustomField>