force-app/main/default/objects/Home_Approval__c/fields/Designation_of_responsible_adult__c.field-meta.xml
<CustomField>
    <fullName>Designation_of_responsible_adult__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>System</inlineHelpText>
    <label>Designation of responsible adult</label>
    <type>Checkbox</type>
</CustomField>