force-app/main/default/objects/Home_Approval__c/fields/Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Exceptions__c</fullName>
    <label>Exceptions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>