force-app/main/default/objects/Home_Approval__c/fields/Family_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Family_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Assessment</label>
    <type>Checkbox</type>
</CustomField>