force-app/main/default/objects/Home_Approval__c/fields/Family_Assessment_Verified__c.field-meta.xml
<CustomField>
    <fullName>Family_Assessment_Verified__c</fullName>
    <formula>Protecting_Strengths__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the protecting strengths.</inlineHelpText>
    <label>Verified(Filled protecting strengths)</label>
    <type>Checkbox</type>
</CustomField>