force-app/main/default/objects/Home_Approval__c/fields/Family_System_Verified__c.field-meta.xml
<CustomField>
    <fullName>Family_System_Verified__c</fullName>
    <formula>Family_s_ability_to_resolve_conflict__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the family ability to resolve conflicts.</inlineHelpText>
    <label>Verified(Filled family conflicts)</label>
    <type>Checkbox</type>
</CustomField>