force-app/main/default/objects/Home_Approval__c/fields/Federal_criminal_record_household_member__c.field-meta.xml
<CustomField>
    <fullName>Federal_criminal_record_household_member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Federal criminal record checks for all household member 18 years age and older have been completed (System)</inlineHelpText>
    <label>Federal(Child house in household)</label>
    <type>Checkbox</type>
</CustomField>