force-app/main/default/objects/Home_Approval__c/fields/Filled_Household__c.field-meta.xml
<CustomField>
    <fullName>Filled_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filled(Household)</label>
    <type>Checkbox</type>
</CustomField>