force-app/main/default/objects/Home_Approval__c/fields/Filled_Pet__c.field-meta.xml
<CustomField>
    <fullName>Filled_Pet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filled(Pet)</label>
    <type>Checkbox</type>
</CustomField>