force-app/main/default/objects/Home_Approval__c/fields/Financial_Form_with_Verification_Income__c.field-meta.xml
<CustomField>
    <fullName>Financial_Form_with_Verification_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User</inlineHelpText>
    <label>Financial Form with Verification Income</label>
    <type>Checkbox</type>
</CustomField>