force-app/main/default/objects/Home_Approval__c/fields/Fire_and_safety__c.field-meta.xml
<CustomField>
    <fullName>Fire_and_safety__c</fullName>
    <formula>NOT(ISBLANK(Connecting_Strengths__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Screening for incidents of child abuse or neglect (CPS Clearance) for each household member (System)</inlineHelpText>
    <label>Fire(Family assessment in connecting)</label>
    <type>Checkbox</type>
</CustomField>