force-app/main/default/objects/Home_Approval__c/fields/Fire_Safety_Inspection_Completed__c.field-meta.xml
<CustomField>
    <fullName>Fire_Safety_Inspection_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>System</inlineHelpText>
    <label>Fire&amp;Safety Inspection Completed</label>
    <type>Checkbox</type>
</CustomField>