force-app/main/default/objects/Home_Approval__c/fields/Fire_Safety_Inspection_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Fire_Safety_Inspection_Request_Date__c</fullName>
    <label>Fire Safety Inspection Request Date</label>
    <type>Date</type>
</CustomField>