force-app/main/default/objects/Home_Approval__c/fields/Health_and_Sanitary_Survey_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Health_and_Sanitary_Survey_Request_Date__c</fullName>
    <label>Health and Sanitary Survey Request Date</label>
    <type>Date</type>
</CustomField>