force-app/main/default/objects/Home_Approval__c/fields/Health_Sanitary_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Health_Sanitary_Survey_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>System</inlineHelpText>
    <label>Health&amp;Sanitary Survey Completed</label>
    <type>Checkbox</type>
</CustomField>