force-app/main/default/objects/Home_Approval__c/fields/Health_Sanitary_Survey_Completion__c.field-meta.xml
<CustomField>
    <fullName>Health_Sanitary_Survey_Completion__c</fullName>
    <formula>NOT(ISBLANK(Protecting_Strengths__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Health &amp; Sanitary Survey Completed (System)</inlineHelpText>
    <label>Health (Protect in Family assessment)</label>
    <type>Checkbox</type>
</CustomField>