force-app/main/default/objects/Home_Approval__c/fields/Health_Sanitary_Survey_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Health_Sanitary_Survey_Completion_Date__c</fullName>
    <label>Health &amp; Sanitary Survey Completion Date</label>
    <type>Date</type>
</CustomField>