force-app/main/default/objects/Home_Approval__c/fields/Home_Approval_Name__c.field-meta.xml
<CustomField>
    <fullName>Home_Approval_Name__c</fullName>
    <label>Home Approval Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoptive Home Approval</fullName>
            </value>
            <value>
                <fullName>Guardianship Home Approval</fullName>
            </value>
            <value>
                <fullName>ICPC Home Approval</fullName>
            </value>
            <value>
                <fullName>Kinship Home Approval</fullName>
            </value>
            <value>
                <fullName>Provisional Kinship Home Approval</fullName>
            </value>
            <value>
                <fullName>Provisional Regular Home Approval</fullName>
            </value>
            <value>
                <fullName>Provisional Restricted Home Approval</fullName>
            </value>
            <value>
                <fullName>Regular Home Approval</fullName>
            </value>
            <value>
                <fullName>Restricted Home Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>