force-app/main/default/objects/Home_Approval__c/fields/Home_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Home_Approval_Type__c</fullName>
    <label>Home Approval Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>