force-app/main/default/objects/Home_Approval__c/fields/Home_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Home_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Assessment</label>
    <type>Checkbox</type>
</CustomField>