force-app/main/default/objects/Home_Approval__c/fields/How_has_the_motivation_changed_pride__c.field-meta.xml
<CustomField>
    <fullName>How_has_the_motivation_changed_pride__c</fullName>
    <inlineHelpText>How has this motivation changed through the PRIDE process? Expectations?</inlineHelpText>
    <label>How has the motivation changed pride?</label>
    <type>TextArea</type>
</CustomField>