force-app/main/default/objects/Home_Approval__c/fields/Isfilled_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Isfilled_Clearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Isfilled Clearance</label>
    <type>Checkbox</type>
</CustomField>