force-app/main/default/objects/Home_Approval__c/fields/Justification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Justification_Notes__c</fullName>
    <label>Justification /Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>