force-app/main/default/objects/Home_Approval__c/fields/Main_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Main_Approval_Type__c</fullName>
    <label>Main Approval Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>