force-app/main/default/objects/Home_Approval__c/fields/MARE_referral_discussed__c.field-meta.xml
<CustomField>
    <fullName>MARE_referral_discussed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User</inlineHelpText>
    <label>MARE referral discussed</label>
    <type>Checkbox</type>
</CustomField>