force-app/main/default/objects/Home_Approval__c/fields/Meeting_Family_Comments__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Family_Comments__c</fullName>
    <inlineHelpText>Meeting Children&apos;s Development Needs and Addressing Development Delay</inlineHelpText>
    <label>Meeting Family Comments</label>
    <type>TextArea</type>
</CustomField>