force-app/main/default/objects/Home_Approval__c/fields/Meeting_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Weaknesses__c</fullName>
    <inlineHelpText>Meeting Children&apos;s Development Needs and Addressing Development Delay</inlineHelpText>
    <label>Meeting Weaknesses</label>
    <type>TextArea</type>
</CustomField>