force-app/main/default/objects/Home_Approval__c/fields/Minimum_Age_Months__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Age_Months__c</fullName>
    <label>Minimum Age Months</label>
    <length>100</length>
    <type>Text</type>
</CustomField>