force-app/main/default/objects/Home_Approval__c/fields/Minimum_of_three_references__c.field-meta.xml
<CustomField>
    <fullName>Minimum_of_three_references__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Minimum of three references have been completed, two of which have been person (System)</inlineHelpText>
    <label>Minimum of three(Related to in referenc)</label>
    <type>Checkbox</type>
</CustomField>