force-app/main/default/objects/Home_Approval__c/fields/More_Than_Six_Children_in_a_Foster_Home__c.field-meta.xml
<CustomField>
    <fullName>More_Than_Six_Children_in_a_Foster_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>More Than Six Children in a Foster Home</label>
    <type>Checkbox</type>
</CustomField>