force-app/main/default/objects/Home_Approval__c/fields/Motivation_Verified__c.field-meta.xml
<CustomField>
    <fullName>Motivation_Verified__c</fullName>
    <formula>NOT(ISBLANK( What_was_the_family_original_motivation__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified Enabled, If filled What was the family&apos;s original motivation</inlineHelpText>
    <label>Verified(Filled  family&apos;s motivation)</label>
    <type>Checkbox</type>
</CustomField>