force-app/main/default/objects/Home_Approval__c/fields/New_Home_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Home_Approval_Type__c</fullName>
    <label>New Home Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adaptive Home Approval</fullName>
                <default>true</default>
                <label>Adaptive Home Approval</label>
            </value>
            <value>
                <fullName>Guardianship Home Approval</fullName>
            </value>
            <value>
                <fullName>ICPC Home Approval</fullName>
            </value>
            <value>
                <fullName>Kinship Home Approval</fullName>
            </value>
            <value>
                <fullName>Provisonal Kinship Home Approval</fullName>
            </value>
            <value>
                <fullName>Provisional Regular Home Approval</fullName>
            </value>
            <value>
                <fullName>Provisional Restricted Home Approval</fullName>
            </value>
            <value>
                <fullName>Regular Home Approval</fullName>
            </value>
            <value>
                <fullName>Restricted Home Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>