force-app/main/default/objects/Home_Approval__c/fields/Next_Reconsideration_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Reconsideration_Due_Date__c</fullName>
    <label>Next Reconsideration Due Date</label>
    <type>Date</type>
</CustomField>