force-app/main/default/objects/Home_Approval__c/fields/Physical_exams_for_household_members__c.field-meta.xml
<CustomField>
    <fullName>Physical_exams_for_household_members__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Physical exams have been performed for all household member in the last two year (System).</description>
    <inlineHelpText>System</inlineHelpText>
    <label>Physical exams(Related to in household)</label>
    <type>Checkbox</type>
</CustomField>