force-app/main/default/objects/Home_Approval__c/fields/Protecting_Family_Comments__c.field-meta.xml
<CustomField>
    <fullName>Protecting_Family_Comments__c</fullName>
    <inlineHelpText>Protecting and Nuturing Children</inlineHelpText>
    <label>Protecting Family Comments</label>
    <type>TextArea</type>
</CustomField>