force-app/main/default/objects/Home_Approval__c/fields/Protecting_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Protecting_Weaknesses__c</fullName>
    <inlineHelpText>Protecting and Nuturing Children</inlineHelpText>
    <label>Protecting Weaknesses</label>
    <type>TextArea</type>
</CustomField>