force-app/main/default/objects/Home_Approval__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Home Approvals</relationshipLabel>
    <relationshipName>Home_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>