force-app/main/default/objects/Home_Approval__c/fields/Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Id__c</fullName>
    <formula>Provider__r.Casevault_ProID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Id</label>
    <type>Text</type>
</CustomField>