force-app/main/default/objects/Home_Approval__c/fields/Reason_for_Home_Approval__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Home_Approval__c</fullName>
    <label>Reason for Home Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adoptive Home No Longer Accepting Children</fullName>
            </value>
            <value>
                <fullName>New Provider</fullName>
            </value>
            <value>
                <fullName>Re-Opening Provider</fullName>
            </value>
            <value>
                <fullName>Change in Home Approval Type</fullName>
            </value>
            <value>
                <fullName>Reconsideration</fullName>
            </value>
            <value>
                <fullName>Significant Change in Household</fullName>
            </value>
            <value>
                <fullName>Convert ICPC Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>