force-app/main/default/objects/Home_Approval__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommendation</label>
    <referenceTo>Recommendation</referenceTo>
    <relationshipLabel>Home Approvals</relationshipLabel>
    <relationshipName>Home_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>