force-app/main/default/objects/Home_Approval__c/fields/Recommendation_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Entry_Date__c</fullName>
    <label>Recommendation Entry Date</label>
    <type>Date</type>
</CustomField>