force-app/main/default/objects/Home_Approval__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <label>Recommendations</label>
    <type>TextArea</type>
</CustomField>