force-app/main/default/objects/Home_Approval__c/fields/Recommendations_Entered__c.field-meta.xml
<CustomField>
    <fullName>Recommendations_Entered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommendations Entered</label>
    <type>Checkbox</type>
</CustomField>