force-app/main/default/objects/Home_Approval__c/fields/References_from_school_personnel__c.field-meta.xml
<CustomField>
    <fullName>References_from_school_personnel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User</inlineHelpText>
    <label>References from school personnel</label>
    <type>Checkbox</type>
</CustomField>