force-app/main/default/objects/Home_Approval__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <length>100</length>
    <type>Text</type>
</CustomField>